MyDev/src/objects/FacebookSession__c.object
<CustomObject>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>AccessToken</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry__c</fullName>
        <label>Expiry</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>SessionId</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Facebook Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facebook Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>